@@ -26,14 +26,17 @@ import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.io.*;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.security.SignatureException;
 import java.util.Locale;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
 
 @Slf4j
 public class PgPUtilsTest {
@@ -78,7 +81,7 @@ public class PgPUtilsTest {
         try {
             PGPSignature signature = getPGPSignature("testData.txt.asc");
             PGPPublicKeyRing pgpPublicKeyRing = getPGPPublicKeyRing("387C8307.asc");
-            File data = getDataAsFile("testData.txt");
+            Path data = getDataAsFile("testData.txt");
             boolean isValid = PgPUtils.isSignatureValid(signature, pgpPublicKeyRing.getPublicKey(), data);
             assertTrue(isValid);
         } catch (Exception e) {
@@ -88,41 +91,41 @@ public class PgPUtilsTest {
     }
 
     private PGPPublicKeyRing getPGPPublicKeyRing(String fileName) throws IOException, PGPException {
-        File file = Paths.get("temp", fileName).toFile();
+        Path file = Path.of("temp", fileName);
         try {
-            try (InputStream resource = FileUtils.getResourceAsStream(fileName)) {
-                OutputStream out = new FileOutputStream(file);
+            try (InputStream resource = FileUtils.getResourceAsStream(fileName);
+                 OutputStream out = Files.newOutputStream(file)) {
                 FileUtils.copy(resource, out);
             }
             return PgPUtils.readPgpPublicKeyRing(file);
         } finally {
-            file.deleteOnExit();
+            file.toFile().deleteOnExit();
         }
     }
 
     private PGPSignature getPGPSignature(String fileName) throws IOException, SignatureException {
-        File file = Paths.get("temp", fileName).toFile();
+        Path file = Path.of("temp", fileName);
         try {
-            try (InputStream resource = FileUtils.getResourceAsStream(fileName)) {
-                OutputStream out = new FileOutputStream(file);
+            try (InputStream resource = FileUtils.getResourceAsStream(fileName);
+                 OutputStream out = Files.newOutputStream(file)) {
                 FileUtils.copy(resource, out);
             }
             return PgPUtils.readPgpSignature(file);
         } finally {
-            file.deleteOnExit();
+            file.toFile().deleteOnExit();
         }
     }
 
-    private File getDataAsFile(String fileName) throws IOException {
-        File file = Paths.get("temp", fileName).toFile();
+    private Path getDataAsFile(String fileName) throws IOException {
+        Path file = Path.of("temp", fileName);
         try {
             try (InputStream resource = FileUtils.getResourceAsStream(fileName)) {
-                OutputStream out = new FileOutputStream(file);
+                OutputStream out = Files.newOutputStream(file);
                 FileUtils.copy(resource, out);
             }
             return file;
         } finally {
-            file.deleteOnExit();
+            file.toFile().deleteOnExit();
         }
     }
 }
